force-app/main/default/objects/Lost_Animal_Report__c/Lost_Animal_Report__c.object-meta.xml
<CustomObject>
    <label>Lost Animal Report</label>
    <nameField>
        <label>Lost Animal Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lost Animal Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>