force-app/main/default/objects/Lost_Animal_Report__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Person reporting a missing animal.</description>
    <label>Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Lost Animal Reports</relationshipLabel>
    <relationshipName>Lost_Animal_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>